--- a/content/關於.html
+++ b/content/關於.html
@@ -143,7 +143,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content"> <a href='w6.html'>Next</a> >> w6<br /><h1>關於</h1>
-<p><a href="https://github.com/mdecycu/cmsite"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https://github.com/mdecycu/cmsite</span></span></a></p>
+<p><a href="https://github.com/mdecycu/cmsite"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https://github.com/mdecycu/cmsite</span></span></span></span></a></p>
 <br /> <a href='w6.html'>Next</a> >> w6</div>
         
     <!-- footer -->
