--- a/content/sitemap.html
+++ b/content/sitemap.html
@@ -129,7 +129,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='關於.html'>關於</a><li><a href='w6.html'>w6</a><li><a href='W11.html'>W11</a><li><a href='布萊頓.html'>布萊頓</a></li>
+                     <li><a href='關於.html'>關於</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a></li>
                       </ul>
                 </nav>
               </div>
@@ -140,4 +140,4 @@ img.add_border {
           </div>
           
         </header>
-    </nav><section><h1>SMap</h1><div id="tipue_search_content"></div><ul><li><a href='關於.html'>關於</a><li><a href='w6.html'>w6</a><li><a href='W11.html'>W11</a><li><a href='布萊頓.html'>布萊頓</a></li></ul></section></div></body></html>
+    </nav><section><h1>SMap</h1><div id="tipue_search_content"></div><ul><li><a href='關於.html'>關於</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a></li></ul></section></div></body></html>
