--- a/content/關於.html
+++ b/content/關於.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='關於.html'>關於</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a></li>
+                     <li><a href='關於.html'>關於</a><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w8.html'>w8</a><li><a href='w9.html'>w9</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='w12.html'>w12</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,9 +142,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='w6.html'>Next</a> >> w6<br /><h1>關於</h1>
+    <div id="tipue_search_content"> <a href='w5.html'>Next</a> >> w5<br /><h1>關於</h1>
 <p><a href="https://github.com/mdecycu/cmsite"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https://github.com/mdecycu/cmsite</span></span></span></span></span></span></span></span></a></p>
-<br /> <a href='w6.html'>Next</a> >> w6</div>
+<br /> <a href='w5.html'>Next</a> >> w5</div>
         
     <!-- footer -->
       <div class="container">
