--- a/content/w11-12.html
+++ b/content/w11-12.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='關於.html'>關於</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w8.html'>w8</a><li><a href='w9.html'>w9</a><li><a href='w10.html'>w10</a><li><a href='w11-12.html'>w11-12</a><li><a href='w13.html'>w13</a></li>
+                     <li><a href='關於.html'>關於</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w8.html'>w8</a><li><a href='w10.html'>w10</a><li><a href='w11-12.html'>w11-12</a><li><a href='w13.html'>w13</a></li>
                       </ul>
                 </nav>
               </div>
@@ -143,17 +143,71 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w10 << <a href='w10.html'>Previous</a> <a href='w13.html'>Next</a> >> w13<br /><h1>w11-12</h1>
-<p><span style="vertical-align: inherit;">#include &lt;stdio.h&gt;</span><br/><span style="vertical-align: inherit;">#include &lt;gd.h&gt;</span><br/><span style="vertical-align: inherit;">#include &lt;math.h&gt;</span></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">int main() {</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">int 寬度 = 800;</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">整數高度=600；</span></span></span></span></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">gdImagePtr img = gdImageCreateTrueColor(寬度, 高度);</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">gdImageAlphaBlending(img, 0);</span></span></span></span></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">FILE *outputFile = fopen("hellogd.png", "wb");</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">如果（輸出檔案== NULL）{</span></span></span></span></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">fprintf(stderr, "開啟輸出檔時發生錯誤。\n");</span></span></span></span></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">返回1；</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">}</span></span></span></span></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">int 紅色 = gdImageColorAllocate(img, 255, 0, 0);</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">int 藍色 = gdImageColorAllocate(img, 0, 0, 255);</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">int black = gdImageColorAllocate(img, 0, 0, 0);</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">int 白色 = gdImageColorAllocate(img, 255, 255, 255);</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">// 長方形塗色</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">gdImageFilledRectangle(img, 0, 0, width, height, white);</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">gdImageFilledRectangle(img, 0, 0, (int)width/4, (int)height/4, 藍色);</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">// 曲面形著色</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">gdImageFilledEllipse(img, (int)width*3/4, (int)height/4, (int)width/4, (int)width/4, red);</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">// 圓形畫線</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">gdImageEllipse(img, (int)width*3/4, (int)height*3/4, (int)width/4, (int)width/4, red);</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">// 畫直線</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">gdImageLine(img, (int)width/2, (int)height/2, (int)width/2, (int)height/2 + 100, blue);</span></span></span></span></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">// 施工畫線</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">gdPoint points[4];</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">點[0].x = (int)寬度/4;</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">點[0].y = (int)高度*3/4;</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">點[1].x = 點[ 0].x + 100；</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">點[1].y = 點[0].y；</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">點[2].x = 點[1].x；</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">點[2].y = 點[1].y + 100 ；</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">點[3].x = 點[2].x - 100；</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">點[3].y = 點[2].y;</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">gdImagePolygon(img, 點, 4, 黑色);</span></span></span></span></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">// 廈門著色</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">gdPointpoints2[4];</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">點2[0].x = (int)寬度/3;</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">點2[0].y = (int)高度/2;</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">點2[1].x =點2[ 0].x + 100；</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">點2[1].y = 點2[0].y;</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">點2[2].x = 點2[1].x;</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">點2[2].y = 點2[ 1].y + 100；</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">點2[3].x = 點2[2].x - 150；</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">點2[3].y = 點2[2].y;</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">gdImageFilledPolygon(img, 點2, 4, 紅色);</span></span></span></span></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">gdImagePngEx(img, 輸出檔, 9);</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">fclose(輸出檔);</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">gdImageDestroy(img);</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">回傳0；</span></span></span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">}</span></span></span></span></p>
-<p><span style="vertical-align: inherit;"><img alt="" height="300" src="./../images/hellogd.png" width="400"/></span></p>
+<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
+#include &lt;gd.h&gt;
+#include &lt;math.h&gt;
+
+int main() {
+int 寬度 = 800;
+整數高度=600；
+
+gdImagePtr img = gdImageCreateTrueColor(寬度, 高度);
+gdImageAlphaBlending(img, 0);
+
+FILE *outputFile = fopen("hellogd.png", "wb");
+如果（輸出檔案== NULL）{
+
+fprintf(stderr, "開啟輸出檔時發生錯誤。\n");
+
+返回1；
+}
+
+int 紅色 = gdImageColorAllocate(img, 255, 0, 0);
+int 藍色 = gdImageColorAllocate(img, 0, 0, 255);
+int black = gdImageColorAllocate(img, 0, 0, 0);
+int 白色 = gdImageColorAllocate(img, 255, 255, 255);
+// 長方形塗色
+gdImageFilledRectangle(img, 0, 0, width, height, white);
+gdImageFilledRectangle(img, 0, 0, (int)width/4, (int)height/4, 藍色);
+// 曲面形著色
+gdImageFilledEllipse(img, (int)width*3/4, (int)height/4, (int)width/4, (int)width/4, red);
+// 圓形畫線
+gdImageEllipse(img, (int)width*3/4, (int)height*3/4, (int)width/4, (int)width/4, red);
+// 畫直線
+gdImageLine(img, (int)width/2, (int)height/2, (int)width/2, (int)height/2 + 100, blue);
+
+// 施工畫線
+gdPoint points[4];
+點[0].x = (int)寬度/4;
+點[0].y = (int)高度*3/4;
+點[1].x = 點[ 0].x + 100；
+點[1].y = 點[0].y；
+點[2].x = 點[1].x；
+點[2].y = 點[1].y + 100 ；
+點[3].x = 點[2].x - 100；
+點[3].y = 點[2].y;
+gdImagePolygon(img, 點, 4, 黑色);
+
+// 廈門著色
+gdPointpoints2[4];
+點2[0].x = (int)寬度/3;
+點2[0].y = (int)高度/2;
+點2[1].x =點2[ 0].x + 100；
+點2[1].y = 點2[0].y;
+點2[2].x = 點2[1].x;
+點2[2].y = 點2[ 1].y + 100；
+點2[3].x = 點2[2].x - 150；
+點2[3].y = 點2[2].y;
+gdImageFilledPolygon(img, 點2, 4, 紅色);
+
+gdImagePngEx(img, 輸出檔, 9);
+fclose(輸出檔);
+gdImageDestroy(img);
+回傳0；
+}
+
+</pre>
+<p><span style="vertical-align: inherit;"><br/><img alt="" height="300" src="./../images/hellogd.png" width="400"/></span></p>
 <br />w10 << <a href='w10.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
         
     <!-- footer -->
