--- a/content/W9.html
+++ b/content/W9.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='關於.html'>關於</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w8.html'>w8</a><li><a href='w10.html'>w10</a><li><a href='w11-12.html'>w11-12</a><li><a href='w13.html'>w13</a></li>
+                     <li><a href='關於.html'>關於</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w8.html'>w8</a><li><a href='W9.html'>W9</a><li><a href='W10.html'>W10</a><li><a href='W11-12.html'>W11-12</a><li><a href='w13.html'>w13</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,8 +142,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w8 << <a href='w8.html'>Previous</a> <a href='w11-12.html'>Next</a> >> w11-12<br /><h1>w10</h1>
-<br />w8 << <a href='w8.html'>Previous</a> <a href='w11-12.html'>Next</a> >> w11-12</div>
+    <div id="tipue_search_content">w8 << <a href='w8.html'>Previous</a> <a href='W10.html'>Next</a> >> W10<br /><h1>W9</h1>
+<br />w8 << <a href='w8.html'>Previous</a> <a href='W10.html'>Next</a> >> W10</div>
         
     <!-- footer -->
       <div class="container">
