--- a/content/w8.html
+++ b/content/w8.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='關於.html'>關於</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w8.html'>w8</a><li><a href='W9-10.html'>W9-10</a><li><a href='W11-12.html'>W11-12</a><li><a href='w13.html'>w13</a></li>
+                     <li><a href='關於.html'>關於</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w8.html'>w8</a><li><a href='W11-12.html'>W11-12</a><li><a href='w13.html'>w13</a><li><a href='cEX.html'>cEX</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w7 << <a href='w7.html'>Previous</a> <a href='W9-10.html'>Next</a> >> W9-10<br /><h1>w8</h1>
+    <div id="tipue_search_content">w7 << <a href='w7.html'>Previous</a> <a href='W11-12.html'>Next</a> >> W11-12<br /><h1>w8</h1>
 <pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">＃包括</span></span></span></span></span></span><span></span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">
 ＃包括</span></span></span></span></span></span><span></span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">
 ＃包括</span></span></span></span></span></span><span></span>
@@ -743,7 +743,7 @@ int main() {</span></span><span></span><span style="vertical-align: inherit;"><s
 }</span></span><span></span>
 </pre>
 <p><img alt="" height="267" src="./../images/output.png" width="400"/><br/><br/></p>
-<br />w7 << <a href='w7.html'>Previous</a> <a href='W9-10.html'>Next</a> >> W9-10</div>
+<br />w7 << <a href='w7.html'>Previous</a> <a href='W11-12.html'>Next</a> >> W11-12</div>
         
     <!-- footer -->
       <div class="container">
